# comparedocs-fast-research

./: .env.example  .gitignore  DEPLOYMENT.md  LOGGING.md  Makefile  README.md  add_logging_script.sh  check-services.sh  check_binaries.sh  check_services.sh  claude.md  diagnose.sh  docker-compose.yml  fix_and_restart.sh  get_logs.sh  rebuild_and_start.sh  rust_python_ultra_fast_document_processing_comparison_architecture_dockerized.md
infra/prometheus/: prometheus.yml
scripts/: generate-test-pdfs.py
services/embedder/: Dockerfile  main.py  requirements.txt
services/frontend/: Dockerfile  nginx.conf  package.json
services/frontend/public/: index.html
services/frontend/src/: App.css  App.js  PerformanceTest.js
services/gateway/: Dockerfile  main.py  report_template.html  requirements.txt
services/pdf-orchestrator/: Cargo.toml  Dockerfile
services/pdf-orchestrator/src/: main.rs
services/report-builder/: requirements.txt
services/rust-comparator/: Cargo.toml  Dockerfile
services/rust-comparator/src/: main.rs
services/rust-extractor/: Cargo.toml  Dockerfile
services/rust-extractor/src/: main.rs
services/rust-normalizer/: Cargo.toml  Dockerfile
services/rust-normalizer/src/: main.rs
sql/: init.sql
